--- a/assignment1/styles/custom.css
+++ b/assignment1/styles/custom.css
@@ -13,3 +13,16 @@ html, body{
     font-family: sans-serif;
     font-weight: 100;
 }
+
+svg .section-title{
+    font-size: 17px;
+    font-weight: 600;
+    color: #565756;
+}
+
+svg .sub-title{
+    font-size: 11px;
+    font-weight: 100;
+    font-style: italic;
+    color: #565756;
+}
