--- a/project/styles/custom.css
+++ b/project/styles/custom.css
@@ -3,7 +3,9 @@
     width: 1000px;
     padding-bottom: 2px;
 }
-
+.toolbar .option{
+    margin-right: 15px;
+}
 .toolbar .option .caption{
     font-size: 14px;
 }
@@ -15,6 +17,12 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: "Open Sans", sans-serif;
+}
+.container-box{
+    overflow: hidden;
+    border: 1px solid black;
+    height: 700px;
+    width: 1000px;
 }
 
 .country {
@@ -29,19 +37,6 @@ body {
     fill: #555555;
 }
 
-/* div.tooltip {
-    position: absolute;
-    text-align: center;
-    min-width: 60px;
-    transition: opacity 0.25s ease-in-out;
-    min-height: 28px;
-    padding: 8px 12px;
-    font: 12px sans-serif;
-    background: white;
-    border: 1px solid lightgray;
-    border-radius: 4px;
-    pointer-events: none;
-} */
 
 button {
     background: transparent;
@@ -58,13 +53,15 @@ button:hover {
 
 .d3-tip {
     position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.4;
-    padding: 20px;
-    pointer-events: none !important;
-    color: #203d5d;
-    box-shadow: 0 4px 20px 4px rgba(0, 20, 60, .1), 0 4px 80px -8px rgba(0, 20, 60, .2);
-    background-color: #fff;
+    text-align: left;
+    min-width: 60px;
+    transition: opacity 0.25s ease-in-out;
+    min-height: 28px;
+    padding: 8px 12px;
+    font: 12px sans-serif;
+    background: white;
+    border: 1px solid lightgray;
     border-radius: 4px;
+    pointer-events: none;
 }
   
