--- a/project/styles/custom.css
+++ b/project/styles/custom.css
@@ -47,11 +47,15 @@ body {
 .pause-text{
     display: none;
 }
+.progress-container{
+    width: 100%;
+}
 .progress{
     display: grid;
     grid-template-columns: 50px calc(100% - 50px);
     margin-top: 15px;
     margin-left: 15px;
+    width: 100%;
 }
 
 .btn-control{
@@ -122,4 +126,10 @@ button:hover {
     border-radius: 4px;
     pointer-events: none;
 }
-  
+
+
+ /* area chart */
+ .area {							
+    fill: url(#area-gradient);					
+    stroke-width: 0px;			
+  }
