Finished treemap with zooming, linear color assignment and country code visibility

--- a/project/styles/custom.css
+++ b/project/styles/custom.css
@@ -44,6 +44,11 @@ body {
     margin: 2px;
 }
 
+.tree-chart rect {
+    stroke-width: 0.5px;
+    stroke: #958d8d;
+}
+
 .pause-text{
     display: none;
 }
