--- a/project/styles/custom.css
+++ b/project/styles/custom.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: "Open Sans", sans-serif;
+    overflow: hidden;
 }
 .container-box{
     overflow: hidden;
@@ -137,4 +138,39 @@ button:hover {
  .area {							
     fill: url(#area-gradient);					
     stroke-width: 0px;			
+  }
+
+  /* table */
+  .table{
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+  }
+
+  .table tr{
+    display: grid;
+    grid-template-columns: 14% 14% 14% 14% 14% 10% 10% 10%;
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 13px;
+    padding: 3px 5px;
+  }
+  .table tr:first-child{
+      position: sticky;
+      top: 0;
+      background: #ccc;
+      font-weight: bold;
+  }
+  .table tr td.ta-right{
+      text-align: right;
+      padding-right: 7px;
+  }
+  .table tr td i{
+    display: none;
+  }
+  .table tr:first-child td i{
+    display: inline-block;
+    font-size: 15px;
+    position: absolute;
+    margin-top: 1px;
+    cursor: pointer;
   }
