--- a/project/styles/custom.css
+++ b/project/styles/custom.css
@@ -56,6 +56,39 @@ body {
     font-weight: bold;
 }
 
+.country-list{
+    display: none;
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    right: 300px;
+    background: #f2f2f2;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: 1px solid #ccc;
+}
+.country-list label{
+    display: block;
+    width: calc(100% - 20px);
+    padding: 4px 10px;
+    border-bottom: 1px solid #e3e3e3;
+    position: relative;
+}
+.country-list label input{
+    position: absolute;
+    right: 7px;
+    top: 6px;
+    width: 20px;
+}
+.country-list .btn-apply-country-sel{
+    width: 100%;
+    color: #2424ed;
+    position: sticky;
+    z-index: 9;
+    top: 0;
+    height: 25px;
+}
+
 .tree-chart rect {
     stroke-width: 0.5px;
     stroke: #958d8d;
